# imeq-rs

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  main.rs  main.yml
tests/: test.rs
